--- a/PurchaseMate/Base.lproj/Main.storyboard
+++ b/PurchaseMate/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <!--Scan-->
         <scene sceneID="P8C-Y5-5dR">
             <objects>
-                <viewController storyboardIdentifier="scan" useStoryboardIdentifierAsRestorationIdentifier="YES" id="J1d-FG-7sE" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="scan" useStoryboardIdentifierAsRestorationIdentifier="YES" id="J1d-FG-7sE" customClass="ScanViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wbf-c7-uok">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -43,13 +43,13 @@
         <!--My Scans-->
         <scene sceneID="8ty-zA-rCw">
             <objects>
-                <tableViewController id="Aye-g3-Ffa" customClass="scannedTVC" sceneMemberID="viewController">
+                <tableViewController id="Aye-g3-Ffa" customClass="ScannedTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="67" sectionHeaderHeight="28" sectionFooterHeight="28" id="0ji-wM-PCs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="scannedCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="scannedCell" rowHeight="67" id="jIA-wQ-0r5" customClass="scannedTableViewCell">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="scannedCell" selectionStyle="default" indentationWidth="10" reuseIdentifier="scannedCell" rowHeight="67" id="jIA-wQ-0r5" customClass="ScannedTableViewCell">
                                 <rect key="frame" x="0.0" y="28" width="375" height="67"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jIA-wQ-0r5" id="6Or-cu-hc0">
@@ -141,7 +141,7 @@
         <!--PurchaseMate-->
         <scene sceneID="bSy-Sf-gr9">
             <objects>
-                <viewController storyboardIdentifier="review" id="Enw-2V-boP" customClass="reviewVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="review" id="Enw-2V-boP" customClass="ReviewViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="J0G-7p-6xB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,7 +183,7 @@
         <!--Results-->
         <scene sceneID="pO2-XK-tAF">
             <objects>
-                <tableViewController title="Results" useStoryboardIdentifierAsRestorationIdentifier="YES" id="SAA-9c-Gxz" customClass="resultsVC" sceneMemberID="viewController">
+                <tableViewController title="Results" useStoryboardIdentifierAsRestorationIdentifier="YES" id="SAA-9c-Gxz" customClass="ResultsViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="8jD-zc-ODa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -380,7 +380,7 @@
         <!--Discover-->
         <scene sceneID="3IQ-B6-q2e">
             <objects>
-                <viewController id="fWB-vd-rP4" customClass="discoverVC" sceneMemberID="viewController">
+                <viewController id="fWB-vd-rP4" customClass="DiscoverViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ttK-p9-wUS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -397,10 +397,10 @@
             </objects>
             <point key="canvasLocation" x="314.5" y="238.5"/>
         </scene>
-        <!--ProductsVC-->
+        <!--Products View Controller-->
         <scene sceneID="P7p-ox-mrV">
             <objects>
-                <viewController storyboardIdentifier="products" useStoryboardIdentifierAsRestorationIdentifier="YES" id="No0-qa-yyU" customClass="productsVC" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="products" useStoryboardIdentifierAsRestorationIdentifier="YES" id="No0-qa-yyU" customClass="ProductsViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DOs-IV-bT5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -412,10 +412,10 @@
             </objects>
             <point key="canvasLocation" x="821.5" y="238.5"/>
         </scene>
-        <!--ReportTVC-->
+        <!--Report Table View Controller-->
         <scene sceneID="o3c-Yn-iJ0">
             <objects>
-                <tableViewController storyboardIdentifier="report" id="Vsz-LZ-4B9" customClass="reportTVC" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="report" id="Vsz-LZ-4B9" customClass="ReportTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" dataMode="static" style="plain" separatorStyle="default" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Y7N-IU-LeP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
